--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Grilli - Amazing & Delicious Food</title>
-  <meta name="title" content="Grilli - Amazing & Delicious Food">
+  <title>DelishDelights Diner</title>
+  <meta name="title" content="DelishDelights Diner">
   <meta name="description" content="This is a Restaurant html template made by codewithsadee">
 
   <!-- 
@@ -47,7 +47,7 @@
 
   <div class="preload" data-preaload>
     <div class="circle"></div>
-    <p class="text">Grilli</p>
+    <p class="text">DelishDelights Diner</p>
   </div>
 
 
